Added TODOs for HTML and CSS

--- a/TodoList/todo/index.html
+++ b/TodoList/todo/index.html
@@ -2,23 +2,27 @@
 <html>
   <head>
     <title>My To-do list</title>
-    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+    <!-- Import CSS file here-->
   </head>
   <body>
     <div id="myDIV" class="header">
         <h2>My To Do List</h2>
-        <input type="text" id="myInput" placeholder="Title...">
+        <!--
+        TODO(HTML):
+        - Add input bar here with type text below right arrow
+        - Set id of the the input tag to "myInput"
+        -->
         <span onclick="newElement()" class="addBtn">Add</span>
     </div>
+
+    <!--
+      TODO(HTML): Add unordered list and add a few items to it
+      TODO(CSS): Set the ID of the unordered list to "myUL"
+    -->
     
-    <ul id="myUL">
-        <li>Hit the gym</li>
-        <li class="checked">Pay bills</li>
-        <li>Meet George</li>
-        <li>Buy eggs</li>
-        <li>Read a book</li>
-        <li>Organize office</li>
-    </ul>
-    <script src="./index.js"></script>
+    
+    <!--
+      TODO(JAVASCRIPT): Import Javascript file
+    -->
   </body>
 </html>
